RE-26 implement Setting for CloudSailor